Fix auth list scroll on iOS

--- a/src/components/auth/auth.styl
+++ b/src/components/auth/auth.styl
@@ -58,6 +58,7 @@
         background rgba(255, 255, 255, 0.95)
         border-right 1px solid #d6ddde
         border-left 1px solid #d6ddde
+        -webkit-overflow-scrolling touch
 
         h1
             font-size 28px
